# hivemind

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROJECT.md  README.md  pyproject.toml
assets/claude-hooks/: settings.hooks.json
assets/prompts/: .gitkeep
assets/templates/: help.md.j2  status_card.md.j2
config/: hivemind.local.toml.example  hivemind.toml  terminals.toml  whitelist.toml
deploy/: install-service.sh  pmset-setup.sh
deploy/launchd/: com.hivemind.bridge.plist
docs/: ARCHITECTURE_LAYOUT.md  PROGRESS.md
documents/: Hivemind 架构与构建执行计划.md
scripts/: bootstrap.sh  dev.sh  doctor.sh  install-hooks.sh  tmux-spawn.sh
src/hivemind/: __init__.py  __main__.py  bridge.py  config.py
src/hivemind/adapters/: __init__.py  claude_hooks.py  dingtalk.py  tmux.py
src/hivemind/core/: __init__.py  queue.py  registry.py  state.py
src/hivemind/services/: __init__.py  dispatcher.py  forwarder.py  hooks_server.py  monitor.py  router.py
src/hivemind/utils/: __init__.py  logging.py  shell.py
tests/: conftest.py
tests/fixtures/: .gitkeep  busy.txt  error.txt  idle.txt  waiting.txt
tests/integration/: test_tmux_smoke.py
tests/unit/: test_dispatcher.py  test_hooks_server.py  test_monitor.py  test_router.py  test_state.py  test_tmux_naming.py
