[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivemind"
version = "1.0.0"
description = "Remote-command multiple Claude Code terminals from DingTalk via tmux. Self-hosted, outbound-only, 24/7 daemon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hivemind" }]
dependencies = [
    "dingtalk-stream>=0.20.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiohttp>=3.9",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
hivemind = "hivemind.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hivemind"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
packages = ["hivemind"]
mypy_path = "src"
strict = true
